<resources>
    <string name="app_name">Smart Mask</string>
    <string name="messages">Messages:</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="paired_devices">Paired devices:</string>
    <string name="no_messages">HR:000,SpO2:000,Temp:00.0C,H/L:000/000mmHg\r\n</string>
    <string name="no_bluetooth">Bluetooth not available.</string>
    <string name="device_name_format">Device: %1$s</string>
    <string name="status_connecting">Status: Connecting</string>
    <string name="status_connected">Status: Connected</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_failed">Connection Failed.</string>
    <string name="bluetooth_unavailable">Connection Failed.</string>
    <string name="message_send_error">Error sending message!</string>
    <string name="you_sent">You</string>

    <string name="str_building_status">Mask Data</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_environment_status">Environment Data</string>
    <string name="str_air_temp">Air Temp\n℃</string>
    <string name="str_humidity">Humidity\n%%</string>
    <string name="str_low_bp">Low BP\nmmHg</string>
    <string name="str_high_bp">High BP\nmmHg</string>
    <string name="str_heart_rate">Heart Rate\nbpm</string>
    <string name="str_skin_temp">Skin Temp\n℃</string>
    <string name="str_oxygen">Blood Oxygen\n%</string>
    <string name="str_breath_freq">Breath Freq\nrpm</string>
    <string name="str_band_pairing_hint">Connecting to Band…</string>
    <string name="str_pair_band">Pair</string>
</resources>
