<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin" >

        <TextView
            android:id="@+id/communicate_connection_text"
            android:hint="@string/status_disconnected"
            android:textSize="@dimen/text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/communicate_connect"
            android:text="@string/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messages"
        android:textSize="@dimen/title"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_card_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:id="@+id/ll_card_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/shape_roundedrect_solid_white_20dp"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:minHeight="120dp"
                        android:orientation="horizontal">

                        <com.espace.smartmask.views.RoundProgressDisplayView
                            android:id="@+id/progressbar_heartrate_frag_env"
                            android:layout_width="0dp"
                            android:layout_height="120dp"
                            android:layout_weight="1"
                            app:progressBarProgress="42"
                            app:text="64"
                            app:textSize="10sp" />

                        <com.espace.smartmask.views.RoundProgressDisplayView
                            android:id="@+id/progressbar_skintemp_frag_env"
                            android:layout_width="0dp"
                            android:layout_height="120dp"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            app:progressBarProgress="85"
                            app:text="34.1"
                            app:textSize="8sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_heartrate_frag_env"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/str_heart_rate" />

                        <TextView
                            android:id="@+id/tv_skintemp_frag_env"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/str_skin_temp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:minHeight="120dp"
                        android:orientation="horizontal">

                        <com.espace.smartmask.views.RoundProgressDisplayView
                            android:id="@+id/progressbar_low_frag_env"
                            android:layout_width="0dp"
                            android:layout_height="120dp"
                            android:layout_weight="1"
                            app:progressBarProgress="80"
                            app:text="72"
                            app:textSize="10sp" />

                        <com.espace.smartmask.views.RoundProgressDisplayView
                            android:id="@+id/progressbar_high_frag_env"
                            android:layout_width="0dp"
                            android:layout_height="120dp"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            app:progressBarProgress="78"
                            app:text="109"
                            app:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_low_frag_env"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/str_low_bp" />

                        <TextView
                            android:id="@+id/tv_high_frag_env"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/str_high_bp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:minHeight="120dp"
                        android:orientation="horizontal">

                        <com.espace.smartmask.views.RoundProgressDisplayView
                            android:id="@+id/progressbar_oxygen_frag_env"
                            android:layout_width="0dp"
                            android:layout_height="120dp"
                            android:layout_weight="1"
                            app:progressBarProgress="98"
                            app:text="98"
                            app:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_oxygen_frag_env"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/str_oxygen" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_alignTop="@+id/ll_card_2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-16dp"
                    android:background="@drawable/shape_roundedrect_solid_theme_20dp"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/str_building_status"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>